[metadata]
name = labeling_AL
version = 0.0.1
author = Camille Dunning
author_email = dunningcamille@gmail.com
description = Label data using active learning.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/camille-004/labeling-AL
project_urls =
Bug Tracker = https://github.com/camille-004/labeling-AL/issues

classifiers =
Programming Language :: Python :: 3
Operating System :: OS Independent

[options]
package_dir =
    =src

packages = find:
python_requires = >=3.9
install_requires =
    numpy
    pandas
    matplotlib
    seaborn
    rich
    pre-commit